# flask_demo

./: README.md  pyproject.toml
src/app/: __init__.py  app.py  endpoints.py
