[tool.poetry]
name = "flask_demo"
version = "0.1.0"
description = ""
authors = ["Øyvind Isaksen <oyvindisaks1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
Flask-RESTful = "^0.3.8"
Flask-Cors = "^3.0.10"
MyApplication = "^0.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
